--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/LoveIt"]
 	path = themes/LoveIt
 	url = git@github.com:escuelaramonfdez/LoveIt.git
+[submodule "public"]
+	path = public
+	url = git@github.com:escuelaramonfdez/escuelaramonfdez.github.io.git
