Añadido post escuela 2025.

--- a/hugo.toml
+++ b/hugo.toml
@@ -26,7 +26,7 @@ title = "Escuela Ramón Fernández Durán"
 
 # Author config
   [params.author]
-    name = "Editor"
+    name = "Editora"
     email = "escueraramonfdez@riseup.net"
     link = ""
 
